item card created

--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
     </nav>
   </header>
   <!-- Product Cards -->
- 
-    <div class="card">
+ <div class="card">
+      <img class="product-image" src="img/shirt-1.png" alt="Stylish T-Shirt">
+      <h2 class="title">Stylish T-Shirt</h2>
+      <p class="description">A comfortable and fashionable t-shirt, perfect for everyday wear.</p>
+      <h3 class="price">$25.00</h3>
+      <button class="add-to-cart">Add to Cart</button>
     </div>
 </body>
 </html>
