--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Product Cards -->
   <div class="row">
     <div class="card">
-      <img class="product-image" src="img/shirt-1.png" alt="Stylish T-Shirt">
+      <img class="product-image" src="assets/img/shirt-1.png" alt="Stylish T-Shirt">
       <h2 class="title">Stylish T-Shirt</h2>
       <p class="description">A comfortable and fashionable t-shirt, perfect for everyday wear.</p>
       <h3 class="price">$25.00</h3>
@@ -26,7 +26,7 @@
     </div>
 
     <div class="card">
-      <img class="product-image" src="img/shirt-2.png" alt="Stylish T-Shirt">
+      <img class="product-image" src="assets/img/shirt-2.png" alt="Stylish T-Shirt">
       <h2 class="title">Cool T-Shirt</h2>
       <p class="description">A stylish cotton tee that fits all seasons.</p>
       <h3 class="price">$20.00</h3>
@@ -34,7 +34,7 @@
     </div>
 
     <div class="card">
-      <img class="product-image" src="img/shirt-3.png" alt="Stylish T-Shirt">
+      <img class="product-image" src="assets/img/shirt-3.png" alt="Stylish T-Shirt">
       <h2 class="title">Classic T-Shirt</h2>
       <p class="description">Timeless design, soft and comfy fabric.</p>
       <h3 class="price">$50.00</h3>
