--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<!-- Header Navbar -->
+  <!-- Header Navbar -->
   <header class="navbar">
     <div class="logo">Sheraz Tahir</div>
     <nav class="nav-links">
@@ -41,5 +42,8 @@
       <button class="add-to-cart">Add to Cart</button>
     </div>
   </div>
+  <footer>
+    <p>© 2025 John Alex. All rights reserved.</p>
+  </footer>
 </body>
 </html>
